fixed some css problems with div alignments and improved nav/download button animations

--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -63,8 +63,7 @@ a:visited {
 }
 // Without the '!important' tags the nav hyperlinks wont stop going blue instead of green
 a:hover {
-  color: #64d640 !important;
-  text-decoration: none !important;
+  animation: buttons 0.5s linear 1 forwards;
 }
 h1 {
   color: #ffffff;
@@ -247,7 +246,7 @@ i {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 20%;
 }
 .message-box-outer {
   background-color: #838383;
@@ -324,6 +323,17 @@ i {
     background-color: #5eae46;
   }
 }
+@keyframes buttons {
+  0% {
+    color: white;
+  }
+  50% {
+    color: #9eff81;
+  }
+  100% {
+    color: #56ff23;
+  }
+}
 
 // Media Rules for Phones
 @media (max-width: 500px) {
@@ -335,6 +345,10 @@ i {
     padding: 10px 10px 0px 10px;
     text-transform: uppercase;
     font-size: 14px;
+  }
+  .about-me-picture {
+    width: 100%;
+    height: 100%;
   }
   .skills-flex {
     text-align: center;
@@ -348,6 +362,9 @@ i {
   }
   .skill-name-font {
     font-size: 18px;
+  }
+  .download-button {
+    width: 100%;
   }
   .message-box-outer {
     background-color: #838383;
